--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 		<p><span style="color: red">{</span> 100% placement Guarantee <span style="color: red">}</span></p>
 	</div>
 	<div class="sen">
-		<p>Orisys Academy consists of highly qualified and experienced professionals who work towards imparting industries-oriented skills to the youths to make them more aware and confident of their skills. These youths get an opportunity to witness the application of the theories learned in their academic curriculum. They are provided short-term internships in which they get a chance to implement their skills in a real-world project to which they can relate easily. This leads to the retention of concepts, that they have learned before, for a longer period. The courses offered are well structured by the experienced team who keep in mind that the students are periodically evaluated.</p>
+		<p>Orisys Academy consists of highly qualified and experienced professionals who work towards imparting industries-oriented skills to the youths to make them more aware and confident of their skills. These youths get an opportunity to witness the application of the theories learned in their academic curriculum.</p>
 	</div>
 		<img src="images/img1.jpg" height="600px" width="1500px"class="compu3">
 	<div class="sen2">
-		<p> Web development involves so many different tasks that it’s almost impossible to imagine a single person being able to carry out each and every one of them on a professional level. That’s why a successful web app development project needs a good team made up of specialists who are well-versed each in their own field. project architect can engage in the discussion with a customer. Based on the information they receive, they can decide on the architecture most suitable for the customer’s business needs. After approving the architecture, the architect can be employed part-time but remains in charge of everything regarding frontend-backend-database data exchange and later – web app integration.</p>
+		<p> Web development involves so many different tasks that it’s almost impossible to imagine a single person being able to carry out each and every one of them on a professional level. That’s why a successful web app development project needs a good team made up of specialists who are well-versed each in their own field. project architect can engage in the discussion with a customer. </p>
 	</div>
 		<img src="images/img5.jpg" height="500px" width="630px"class="compu4">
 		<div class="box1">
